--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,24 +1,25 @@
 ---
 galaxy_info:
   author: Richard Durso
-  description: Easily customized message of the day (MOTD) login screen, with ZFS support, smartmon drive testing, drive temperatures, HDD, SSD and NVMe support, with per hosts customizations.
+  description: |
+    Easily customized message of the day (MOTD) login screen, with ZFS support, smartmon drive testing,
+    drive temperatures, HDD, SSD and NVMe support, with per hosts customizations.
 
   platforms:
-  - name: Ubuntu
-    versions:
-      - all
+    - name: Ubuntu
+      versions:
+        - all
 
   license: BSD
 
-  min_ansible_version: 1.2
+  min_ansible_version: "1.2"
 
   galaxy_tags:
-    - MOTD
-    - ZFS
+    - motd
+    - zfs
     - smartctl
     - login
     - hddtemp
-    - SSD
-    - NVMe
+    - ssd
+    - nvme
     - temperature
-
