--- a/tasks/02_setup_smartmontools.yml
+++ b/tasks/02_setup_smartmontools.yml
@@ -4,52 +4,51 @@
 #
 ---
 - name: Install and Configure SmartMon Tools Block
-  block:
-  - name: Install packages for SmartMon Tools
-    apt:
-      name: ['smartmontools']
-      state: present
-      install_recommends: no
-    when:
-      - ansible_os_family == "Debian"
-
-  # Disable existing DEVICESCAN entry (anything past it is ignored)
-  - name: Add devices to /etc/smartd.conf
-    lineinfile:
-      path: "/etc/smartd.conf"
-      regexp: "^(DEVICESCAN*)"
-      line: "#\\1"
-      state: present
-    
-  # Remove any pre-existing devices no longer present.  Device names change
-  # when moved to new systems, motherboards, controllers, etc.
-  - name: Remove existing devices from /etc/smartd.conf
-    lineinfile:
-      path: "/etc/smartd.conf"
-      regexp: "^(\/dev\/disk\/by-id\/*)"
-      state: absent
-
-  # Add one line per device to "/etc/smartd.conf" replace any existing line for device
-  # ( -a) enables some common options
-  # (-H) checks the SMART health status
-  # (-l) reports increases in both SMART error logs 
-  # (-f) checks for failure of any Usage Attributes
-  # -s (S/../.././02|L/../../6/03)" schedules the short and long self-tests
-  # In this example, the short self-test will run daily at 2:00 A.M. The long test will run on every Saturday at 3:00 A.M. 
-  - name: Add devices to /etc/smartd.conf
-    lineinfile:
-      path: "/etc/smartd.conf"
-      regexp: "^{{item}}"
-      line: "{{item}} -a -H -l error -l selftest -f -s (S/{{smartd_short_test}}|L/{{smartd_long_test}}) -m root -M exec /usr/share/smartmontools/smartd-runner"
-      state: present
-    loop: "{{disk_by_id|list}}"
-
-  - name: Restart smartd service
-    systemd:
-      name: smartd
-      state: restarted
-
   when:
-  - ansible_os_family == "Debian"
+    - ansible_os_family == "Debian"
   tags:
-  - setup_smartmontools
+    - setup_smartmontools
+  block:
+    - name: Install packages for SmartMon Tools
+      ansible.builtin.apt:
+        name: ['smartmontools']
+        state: present
+        install_recommends: false
+      when:
+        - ansible_os_family == "Debian"
+
+    # Disable existing DEVICESCAN entry (anything past it is ignored)
+    - name: Add devices to /etc/smartd.conf
+      ansible.builtin.lineinfile:
+        path: "/etc/smartd.conf"
+        regexp: "^(DEVICESCAN*)"
+        line: "#\\1"
+        state: present
+
+    # Remove any pre-existing devices no longer present.  Device names change
+    # when moved to new systems, motherboards, controllers, etc.
+    - name: Remove existing devices from /etc/smartd.conf
+      ansible.builtin.lineinfile:
+        path: "/etc/smartd.conf"
+        regexp: "^(\/dev\/disk\/by-id\/*)"
+        state: absent
+
+    # Add one line per device to "/etc/smartd.conf" replace any existing line for device
+    # ( -a) enables some common options
+    # (-H) checks the SMART health status
+    # (-l) reports increases in both SMART error logs
+    # (-f) checks for failure of any Usage Attributes
+    # -s (S/../.././02|L/../../6/03)" schedules the short and long self-tests
+    # In this example, the short self-test will run daily at 2:00 A.M. The long test will run on every Saturday at 3:00 A.M.
+    - name: Add devices to /etc/smartd.conf
+      ansible.builtin.lineinfile: # noqa yaml[line-length]
+        path: "/etc/smartd.conf"
+        regexp: "^{{ item }}"
+        line: "{{ item }} -a -H -l error -l selftest -f -s (S/{{ smartd_short_test }}|L/{{ smartd_long_test }}) -m root -M exec /usr/share/smartmontools/smartd-runner"
+        state: present
+      loop: "{{ disk_by_id | list }}"
+
+    - name: Restart smartd service
+      ansible.builtin.systemd:
+        name: smartd
+        state: restarted
