--- a/tasks/01_detect_disk_devices.yml
+++ b/tasks/01_detect_disk_devices.yml
@@ -22,7 +22,7 @@
     # The RO indicates if device is read-only (value 1), the awk filters to value 0 - not read-only
     - name: Detect available disk devices
       ansible.builtin.shell:
-        cmd: "lsblk -ndo name,mountpoint,ro --include '8,179,259' | awk '/^[a-z]{3,}+/ && !/[./]/ && /0$/{print $1}'"
+        cmd: "lsblk -ndo name,mountpoint,ro --include '8,179,259' | awk '/^[a-z]+/ && /0$/{print $1}'"
       register: lsblk_devices
       changed_when: lsblk_devices.rc == 0
 
