--- a/tasks/01_detect_disk_devices.yml
+++ b/tasks/01_detect_disk_devices.yml
@@ -22,7 +22,8 @@
     # The RO indicates if device is read-only (value 1), the awk filters to value 0 - not read-only
     - name: Detect available disk devices
       ansible.builtin.shell:
-        cmd: "lsblk -ndo name,mountpoint,ro --include '8,179,259' | awk '/^[a-z]+/ && /0$/{print $1}'"
+        set -o pipefail &&
+        lsblk -ndo name,mountpoint,ro --include '8,179,259' | awk '/^[a-z]+/ && /0$/{print $1}'
       register: lsblk_devices
       changed_when: lsblk_devices.rc == 0
 
@@ -31,5 +32,7 @@
         disk_devices: "{{ lsblk_devices.stdout.splitlines() | map('trim') | list }}"
 
     - name: Set disk_by_id value
-      ansible.builtin.set_fact: # noqa yaml[line-length]
-        disk_by_id: "{{ disk_devices | map('extract', hostvars[inventory_hostname]['ansible_devices'], ['links', 'ids', 0]) | list | map('regex_replace', '^(.*)', '/dev/disk/by-id/\\g<1>') | list }}"
+      ansible.builtin.set_fact:
+        disk_by_id: >
+          {{ disk_devices | map('extract', hostvars[inventory_hostname]['ansible_devices'], ['links', 'ids', 0]) |
+          list | map('regex_replace', '^(.*)', '/dev/disk/by-id/\g<1>') | list }}
