--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -127,3 +127,27 @@ display_temp_unit: "F"
 # -M exec = run the executable PATH instead of the default mail command, when smartd needs to send email
 smartd_conf_values: >
   DEFAULT -a -s (S/{{ smartd_short_test }}|L/{{ smartd_long_test }}) -m {{ smartd_email_notification }} -M exec /usr/share/smartmontools/smartd-runner
+
+# [ Smartmon Node Exporter for Prometheus ]########################################################
+#
+# If a path is defined, this will define where the Smartmon scripts for Node Exporter output will
+# be written to.  To disable simply comment "smartd_node_export_path" this out, the rest will be
+# ignored.
+#
+# This should match the value defined in node exporter flag "--collector.textfile.directory"
+# If this value does not exist you will need to add node-exporter configuration it allow the
+# Smartmon node exporter scripts output to be consumed.  The path below will be created if it
+# does not already exist.
+#
+smartd_node_export_path: "/var/lib/node_exporter/textfile_collector"
+
+# Git Repo for Smartmon Node Exporter Textfile Collector
+smartd_nvme_repo: "https://github.com/reefland/smartmon_nvme"
+
+# Script within repo to copy to node exporter path
+smartd_nvme_script: "smartmon.sh"
+
+# Frequency of running Smartmon Exporter script via Cron
+smartd_nvme_script_cron_hour: "*"  # Run all hours
+
+smartd_nvme_script_cron_minute: "*/5" # Every 5 minutes
